--- a/nononono/101766-the-intertwining/eng.textile
+++ b/nononono/101766-the-intertwining/eng.textile
@@ -1,4 +1,4 @@
-The Intertwining
+﻿The Intertwining
 
 Author: nononono
 
@@ -10,23 +10,15 @@ One
 
 It was Friday night, which meant Izzy was once again at Utopia, the deceptively named nightclub which was Mecca for residents of New Cross who wanted to dance without paying £13 for a double vodka coke. It had all the hallmarks of a place nobody older than 23 should frequent: the floors were so sticky that it was a miracle anyone made it home with both shoes, whilst the noxious combination of body odour, Lynx Africa and Red Bull, as well as a faint whiff of urine, assaulted the nostrils at every turn. The toilets themselves were an absolute joke. There was just one toilet for the women patrons to share, whilst the men were lucky enough to have a large urinal trough, allowing several to relieve themselves all at once. Izzy had been desperate enough to use that trough once, much to the delight of the mostly middle aged and sketchy male clientele. After that, the bouncer told her she'd be barred if she did that again.
 
-Izzy was a teacher, desperately trying to cling to the youth she felt slipping away. At 27, she still had so much ahead of her, yet it felt like every week, she saw a different friend from school announce their engagement, baby or new house on Instagram. Izzy's life wasn't bad by any stretch. She had a flat in Greenwich, shared with Aarushi, her best friend from university. She was a fairly good teacher, even though her job left her so depleted that she struggled to find time to meet anyone, beyond the occasional Hinge date or Tinder hookup.
-
-Her lack of partner surprised everyone, Aarushi often wondered how many arguments Izzy had inadvertently caused, simply from hopeless boyfriends being caught admiring her body by their unimpressed other halves. Her friend Sophie tried to convince her to do OnlyFans instead of teach "You'll still get teenage boys perving over you but at least you'll be paid for it." Tonight, she wore a stunning red dress, so short it barely covered her turquoise thong. Her beautiful brown hair, immaculately curled, had already been complimenting by several women in the line, but Izzy, consumed by a very urgent need to pee, was in no mood to chat.
+@@Izzy was a teacher, desperately trying to cling to the youth she felt slipping away. At 27, she still had so much ahead of her, yet it felt like every week, she saw a different friend from school announce their engagement, baby or new house on Instagram. Izzy's life wasn't bad by any stretch. She had a flat in Greenwich, shared with Aarushi, her best friend from university. She was a fairly good teacher, even though her job left her so depleted that she struggled to find time to meet anyone, beyond the occasional Hinge date or Tinder hookup. Her lack of partner surprised everyone, Aarushi often wondered how many arguments Izzy had inadvertently caused, simply from hopeless boyfriends being caught admiring her body by their unimpressed other halves. Her friend Sophie tried to convince her to do OnlyFans instead of teach "You'll still get teenage boys perving over you but at least you'll be paid for it." Tonight, she wore a stunning red dress, so short it barely covered her turquoise thong. Her beautiful brown hair, immaculately curled, had already been complimenting by several women in the line, but Izzy, consumed by a very urgent need to pee, was in no mood to chat.
 
 "I'm not sure I can hold it much longer, I might have to go to Piss Street," Aarushi moaned, unbuttoning her light blue jeans which dug into her aching bladder.
 
-Piss Street was what Aarushi and Izzy affectionately called Bliss Street, a road adjacent to Utopia, where several clubbers, predominantly female, went to relieve themselves. Aarushi had never used Piss Street; she came from a very strict Indian family who would shudder at the thought of her urinating in public. They had only just come to terms with the idea of her having an English boyfriend who stayed over most nights of the week, and they chose to believe that Scott always slept on the sofa bed when he visited.
+@@Piss Street was what Aarushi and Izzy affectionately called Bliss Street, a road adjacent to Utopia, where several clubbers, predominantly female, went to relieve themselves. Aarushi had never used Piss Street; she came from a very strict Indian family who would shudder at the thought of her urinating in public. They had only just come to terms with the idea of her having an English boyfriend who stayed over most nights of the week, and they chose to believe that Scott always slept on the sofa bed when he visited. Aarushi had lost count of the number of times she'd stood on Piss Street absolutely bursting for a wee, but refusing to go, whilst she held Izzy's coat and bags so she relieve herself with little regard for who saw. Aarushi was a year younger than Izzy, but people always assumed she was older. Perhaps it was her easy manner in social situations, her meteoric rise from intern to sports reporter at the BBC, or her three year relationship with Scott which seemed to avoid all the speed bumps most couples hit at some point. It was impossible to meet Aarushi Basu without being utterly charmed. A goddess in everyone's eyes, except for her own.
 
-Aarushi had lost count of the number of times she'd stood on Piss Street absolutely bursting for a wee, but refusing to go, whilst she held Izzy's coat and bags so she relieve herself with little regard for who saw. Aarushi was a year younger than Izzy, but people always assumed she was older. Perhaps it was her easy manner in social situations, her meteoric rise from intern to sports reporter at the BBC, or her three year relationship with Scott which seemed to avoid all the speed bumps most couples hit at some point. It was impossible to meet Aarushi Basu without being utterly charmed. A goddess in everyone's eyes, except for her own.
+@@After what felt like an eternity, a couple stumbled out, a bleary eyed man in his thirties, eyes bloodshot and trousers undone, followed by a blonde woman several years his junior, mascara running down her cheek and eyes sad and vacant. Izzy and Aarushi exchanged a glance, but both knew they couldn't do anything until they'd taken care of their bladders. The girls darted in, their need to pee intensified further by their close proximity to the toilet. Aarushi locked the door, whilst Izzy rushed to the toilet, clutching herself. The two had long acknowledged that Aarushi had a much stronger bladder, and so Izzy was always allowed to use the loo first. Aarushi had considered asking if she could go first tonight, she couldn't remember a time where she'd needed to go this badly. Maybe when she and her family went back to India a few summers ago, and she ended up on a six hour coach journey with no stops. On that day, she became so desperate that she was literally crying with pain and her mum had to beg the driver to pull over so she could relieve herself at the side of the road. Aarushi often brought that story up when people tried to claim she was perfect.
 
-After what felt like an eternity, a couple stumbled out, a bleary eyed man in his thirties, eyes bloodshot and trousers undone, followed by a blonde woman several years his junior, mascara running down her cheek and eyes sad and vacant. Izzy and Aarushi exchanged a glance, but both knew they couldn't do anything until they'd taken care of their bladders. The girls darted in, their need to pee intensified further by their close proximity to the toilet.
-
-Aarushi locked the door, whilst Izzy rushed to the toilet, clutching herself. The two had long acknowledged that Aarushi had a much stronger bladder, and so Izzy was always allowed to use the loo first. Aarushi had considered asking if she could go first tonight, she couldn't remember a time where she'd needed to go this badly. Maybe when she and her family went back to India a few summers ago, and she ended up on a six hour coach journey with no stops. On that day, she became so desperate that she was literally crying with pain and her mum had to beg the driver to pull over so she could relieve herself at the side of the road. Aarushi often brought that story up when people tried to claim she was perfect.
-
-Izzy hitched her dress up and yanked her thong down, Aarushi almost blushing as she caught a glimpse of her shaved vagina. Izzy was significantly more comfortable with being naked in front of others. Aarushi remembered the first time she saw Izzy naked, when they went skinny dipping after a night out in Mallorca on holiday. Or rather, when Izzy went skinny dipping, and after a lot of persuading, managed to get Aarushi to strip down to her bra and panties.
-
-Aarushi was always a little jealous of how comfortable Izzy was with her own body. She'd lost count of the number of times she'd come home and found Izzy walking around with her tits out, or walked in on her in the bathroom. Izzy was never fazed; the only time she was remotely embarrassed was when Aarushi walked in on her using a vibrator. But even then, Izzy often brings it up herself once she's had a few pints. In stark contrast, Izzy had only seen Aarushi naked twice, once when she accidentally walked in on her having sex with Scott, and once when Aarushi came home from work so desperate to pee that she forgot to close the bathroom door.
+@@Izzy hitched her dress up and yanked her thong down, Aarushi almost blushing as she caught a glimpse of her shaved vagina. Izzy was significantly more comfortable with being naked in front of others. Aarushi remembered the first time she saw Izzy naked, when they went skinny dipping after a night out in Mallorca on holiday. Or rather, when Izzy went skinny dipping, and after a lot of persuading, managed to get Aarushi to strip down to her bra and panties. Aarushi was always a little jealous of how comfortable Izzy was with her own body. She'd lost count of the number of times she'd come home and found Izzy walking around with her tits out, or walked in on her in the bathroom. Izzy was never fazed; the only time she was remotely embarrassed was when Aarushi walked in on her using a vibrator. But even then, Izzy often brings it up herself once she's had a few pints. In stark contrast, Izzy had only seen Aarushi naked twice, once when she accidentally walked in on her having sex with Scott, and once when Aarushi came home from work so desperate to pee that she forgot to close the bathroom door.
 
 Izzy tried to relax. Her bladder was fit to burst, yet she still sometimes got a bit of stage fright when someone else was in the room. Aarushi danced around frantically, she'd been dying for a wee for hours, but they'd gone to a friends house for pre drinks and she got engrossed in a conversation which she was too well mannered to excuse herself from. By the time she'd found a lull in conversation which she could use to deal with her pressing need, the taxi had arrived, and she didn't want to make the driver wait. Her bursting bladder was the price she paid for her unwavering politeness. She shot a desperate look at Izzy, as a drop of urine escaped, dampening her satin red panties slightly.
 
@@ -216,9 +208,7 @@ Izzy was almost taken aback by seeing her friend in this way. But she gladly obl
 
 Five
 
-Izzy hadn't intended to get this desperate. She'd been careful for most of the afternoon, and had tried to limit her water intake once she felt her bladder reach the halfway point, the shiver once again reminding her that her bladder was now accepting fluids from her and Aarushi. She knew the most likely cause. Aarushi had a nervous tick - she couldn't help but sip on water constantly when feeling anxious. She recalled a text conversation shortly before Aarushi's first date with Scott. Aarushi messaged her from the top floor of the number 83 bus, looking for a distraction as she was convinced she was going to piss herself, having been consuming water like oxygen all day.
-
-On another occasion, Aarushi had to ask to use the toilet mid job interview, much to the bemusement of the panel. Izzy reckoned that without the pang in her bladder to remind her to slow down, Aarushi wouldn't have thought to stop drinking water. But that came at a cost, as Izzy sat on the sofa, legs crossed as tightly as possible, ready to explode. Izzy knew by now that she was beyond the point where she could control how much she released, and that any attempt to pee would surely end in the entire contents of her bladder being transferred to Aarushi's. Whilst on national TV.
+@@Izzy hadn't intended to get this desperate. She'd been careful for most of the afternoon, and had tried to limit her water intake once she felt her bladder reach the halfway point, the shiver once again reminding her that her bladder was now accepting fluids from her and Aarushi. She knew the most likely cause. Aarushi had a nervous tick - she couldn't help but sip on water constantly when feeling anxious. She recalled a text conversation shortly before Aarushi's first date with Scott. Aarushi messaged her from the top floor of the number 83 bus, looking for a distraction as she was convinced she was going to piss herself, having been consuming water like oxygen all day. On another occasion, Aarushi had to ask to use the toilet mid job interview, much to the bemusement of the panel. Izzy reckoned that without the pang in her bladder to remind her to slow down, Aarushi wouldn't have thought to stop drinking water. But that came at a cost, as Izzy sat on the sofa, legs crossed as tightly as possible, ready to explode. Izzy knew by now that she was beyond the point where she could control how much she released, and that any attempt to pee would surely end in the entire contents of her bladder being transferred to Aarushi's. Whilst on national TV.
 
 ###
 
@@ -376,21 +366,13 @@ She squirmed under her bedsheets waiting for a response, grabbing her naked crot
 
 "might go to utopia after work, see if we can sort this shit out"
 
-Aarushi dashed to the toilet, sighing with relief as her tortured bladder deflated. The shiver came, reminding her that she was no longer the Queen Bladder, and reminding her to stop pissing, no matter how much she wanted to. The Queen Bladder was a term that the two of them came up with last night. The Queen Bladder was essentially the dominant bladder, the one which was being filled. So when Aarushi held the Queen Bladder, any liquids consumed by either of them would go straight to Aarushi's bladder.
-
-Once Aarushi peed and felt the shiver, Izzy would then hold the Queen Bladder, and any liquids consumed by either of them would go straight to her bladder. Aarushi had had a lot of time to think during her time off. She wondered if there were any long term negative side effects to what was happening. There didn't seem to be, beyond the anxiety of not having full control over such a basic function. She was thankful at least that they were still able to shit independently. Unsatisfied but no longer on the verge of exploding, she finished her wee, wiped, and flushed.
+@@Aarushi dashed to the toilet, sighing with relief as her tortured bladder deflated. The shiver came, reminding her that she was no longer the Queen Bladder, and reminding her to stop pissing, no matter how much she wanted to. The Queen Bladder was a term that the two of them came up with last night. The Queen Bladder was essentially the dominant bladder, the one which was being filled. So when Aarushi held the Queen Bladder, any liquids consumed by either of them would go straight to Aarushi's bladder. Once Aarushi peed and felt the shiver, Izzy would then hold the Queen Bladder, and any liquids consumed by either of them would go straight to her bladder. Aarushi had had a lot of time to think during her time off. She wondered if there were any long term negative side effects to what was happening. There didn't seem to be, beyond the anxiety of not having full control over such a basic function. She was thankful at least that they were still able to shit independently. Unsatisfied but no longer on the verge of exploding, she finished her wee, wiped, and flushed.
 
 "Thanks gal, enjoy being Queen Bladder" she replied.
 
 ###
 
-Izzy had five minutes until her next lesson. She'd sent the email to the manager of Utopia, asking if she could pop in to have a read of the book. She hadn't explained their predicament yet, she didn't want them to think she was a time waster. She checked Twitter quickly. Aarushi was still very much the top story. Every tweet seemingly a different angle on the story: from the 'Be Kind' crowd reminding everyone that there was a real and vulnerable person at the centre of this story, to the trolls posting the gif of Aarushi's dress darkening slowly in response.
-
-The official line from Sky Sports was that 'Aarushi Basu unfortunately became unwell during today's broadcast of Premier League today, and suffered a nasty reaction to some anti-biotics. We wish Aarushi all the best in her recovery, and would like to remind everyone that she is a kind and intelligent broadcaster who deserves our sympathy after a distressing incident.' Izzy scoffed when she saw that 'They should be apologising for not stopping the cameras.'
-
-Izzy took Monday and Tuesday off, worried about Aarushi doing something drastic. But after a few days caring for her flatmate, as well as trying to patch up their friendship, she felt confident that Aarushi was okay to fend for herself. Izzy walked past the toilets. It felt weird not using them before a lesson - normally she'd go no matter what, living in fear of wetting herself in front of a rowdy Year 9 class.
-
-She remembered a few close calls whilst she was training. In one of her first lessons, she was so nervous that she couldn't stop drinking water. So focussed on preparing her classroom to teach, she forgot to leave herself time to go to the toilet. It was one of the worst lessons she'd ever taught, and a well meaning Year 7 girl asked her if she was okay because she kept squirming so much. She almost bowled over several of the children as she ran to the toilet, already spurting into her knickers. Even just a few weeks ago, she had to ask a teaching assistant to cover her Year 8s because she was 'absolutely dying for a wee', having not had time to go in between lessons.
+@@Izzy had five minutes until her next lesson. She'd sent the email to the manager of Utopia, asking if she could pop in to have a read of the book. She hadn't explained their predicament yet, she didn't want them to think she was a time waster. She checked Twitter quickly. Aarushi was still very much the top story. Every tweet seemingly a different angle on the story: from the 'Be Kind' crowd reminding everyone that there was a real and vulnerable person at the centre of this story, to the trolls posting the gif of Aarushi's dress darkening slowly in response. The official line from Sky Sports was that 'Aarushi Basu unfortunately became unwell during today's broadcast of Premier League today, and suffered a nasty reaction to some anti-biotics. We wish Aarushi all the best in her recovery, and would like to remind everyone that she is a kind and intelligent broadcaster who deserves our sympathy after a distressing incident.' Izzy scoffed when she saw that 'They should be apologising for not stopping the cameras.' Izzy took Monday and Tuesday off, worried about Aarushi doing something drastic. But after a few days caring for her flatmate, as well as trying to patch up their friendship, she felt confident that Aarushi was okay to fend for herself. Izzy walked past the toilets. It felt weird not using them before a lesson - normally she'd go no matter what, living in fear of wetting herself in front of a rowdy Year 9 class. She remembered a few close calls whilst she was training. In one of her first lessons, she was so nervous that she couldn't stop drinking water. So focussed on preparing her classroom to teach, she forgot to leave herself time to go to the toilet. It was one of the worst lessons she'd ever taught, and a well meaning Year 7 girl asked her if she was okay because she kept squirming so much. She almost bowled over several of the children as she ran to the toilet, already spurting into her knickers. Even just a few weeks ago, she had to ask a teaching assistant to cover her Year 8s because she was 'absolutely dying for a wee', having not had time to go in between lessons.
 
 ###
 
