--- a/nyonoyo/100084-bedwetting-blunders-at-camp-wellspring-revenge-hypnosis/eng.textile
+++ b/nyonoyo/100084-bedwetting-blunders-at-camp-wellspring-revenge-hypnosis/eng.textile
@@ -44,9 +44,7 @@ In it's place, I'm actually thinking of making a new messing series based on the
 
 “Whatever you guys say, I guess,” the younger sister said dismissively. The group chatted idly amongst themselves before passing out in their beds.
 
-Amy carefully closed the door behind her as she entered the bullies’ cabin. She checked the time on her phone before turning up the volume and placing it in the center of the cabin. Pulling up YouTube, she played a video titled "Sleep Hypnosis | Bedwetting/Weak Bladder”. The short girl had her doubts on whether or not the hypnosis would work. She’d spent hours searching online for a real hypnosis audio until she found this one, where the comments swore up and down that it genuinely worked.
-
-Anxious about being caught and giddy about the prospect of turning her bullies into bedwetters like her, she sat patiently for the video’s duration. Around an hour in, Amy was getting impatient, unsure of if she’d have any success, but just then, Jax started to grumble and shuffle. Amy initially thought the bully was waking up until she had heard a faint hissing noise coming from her. Within seconds, similar noises came from every bed. “No way…,” she thought to herself, before going to cautiously check each girl’s sheets. Wet. Wet. Wet. Wet.
+@@Amy carefully closed the door behind her as she entered the bullies’ cabin. She checked the time on her phone before turning up the volume and placing it in the center of the cabin. Pulling up YouTube, she played a video titled "Sleep Hypnosis | Bedwetting/Weak Bladder”. The short girl had her doubts on whether or not the hypnosis would work. She’d spent hours searching online for a real hypnosis audio until she found this one, where the comments swore up and down that it genuinely worked. Anxious about being caught and giddy about the prospect of turning her bullies into bedwetters like her, she sat patiently for the video’s duration. Around an hour in, Amy was getting impatient, unsure of if she’d have any success, but just then, Jax started to grumble and shuffle. Amy initially thought the bully was waking up until she had heard a faint hissing noise coming from her. Within seconds, similar noises came from every bed. “No way…,” she thought to herself, before going to cautiously check each girl’s sheets. Wet. Wet. Wet. Wet.
 
 “Yes!” Amy exclaimed before covering her mouth.
 
@@ -78,7 +76,5 @@ Anxious about being caught and giddy about the prospect of turning her bullies i
 
 “Apology accepted,” Amy replied. Between this incident and the photos she took, she took pride in knowing she had complete control over her once bullies.
 
-The rest of camp played out interestingly. Aside from the events that unfolded that night, the bullies continued to wet themselves at night, only this time in their diapers. Inversely, Amy’s bedwetting seemed to stop, at least for the time being, further embarrassing the group. What’s more, the hypnosis also had the added effect of weakening the girls’ bladder control during the daytime too, leading to the occasional accident and humiliating diaper checks by the counselors. Although she showed no love for most of them, Amy did feel bad for putting Kara in the same position as everyone else. After all, although she was complicit, she never actually did anything and was the one who told the other girls to stop.
-
-Before returning to school, the two met up privately and reconciled, becoming friends in the process. Kara promised to leave the bully clique and keep her scheme a secret in return for her own hypnosis being undone and her pictures being deleted. On the first day of school, Amy and Kara were on their way to becoming close friends, while Jax, Allie and Zoey were kept in diapers by their families. While no one dared say anything out of risk of being harassed, the loud crinkling under their clothes left little to the imagination. Zoey made the most of it, even going as far as incorporating diapers and watersports into her camshows. Allie threatened to sue anyone who even thought about it, while Jax promised to stomp them into oblivion. However, regardless of each one’s thoughts, none of the affected girls suspected Amy’s revenge plot and never reversed the hypnosis inflicted onto them at Camp Wellspring.
+@@The rest of camp played out interestingly. Aside from the events that unfolded that night, the bullies continued to wet themselves at night, only this time in their diapers. Inversely, Amy’s bedwetting seemed to stop, at least for the time being, further embarrassing the group. What’s more, the hypnosis also had the added effect of weakening the girls’ bladder control during the daytime too, leading to the occasional accident and humiliating diaper checks by the counselors. Although she showed no love for most of them, Amy did feel bad for putting Kara in the same position as everyone else. After all, although she was complicit, she never actually did anything and was the one who told the other girls to stop. Before returning to school, the two met up privately and reconciled, becoming friends in the process. Kara promised to leave the bully clique and keep her scheme a secret in return for her own hypnosis being undone and her pictures being deleted. On the first day of school, Amy and Kara were on their way to becoming close friends, while Jax, Allie and Zoey were kept in diapers by their families. While no one dared say anything out of risk of being harassed, the loud crinkling under their clothes left little to the imagination. Zoey made the most of it, even going as far as incorporating diapers and watersports into her camshows. Allie threatened to sue anyone who even thought about it, while Jax promised to stomp them into oblivion. However, regardless of each one’s thoughts, none of the affected girls suspected Amy’s revenge plot and never reversed the hypnosis inflicted onto them at Camp Wellspring.
 
